Fix alignments in photos view, #8

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -37,7 +37,7 @@
 }
 
 ion-card img {
-  margin-bottom: 8px;
+  margin-bottom: 6px;
 }
 
 h2 {
